2012-04-13  H.J. Lu  <hongjiu.lu@intel.com>

	* elf/tst-auditmod1.c: Check __ILP32__ instead of __LP64__.
	* elf/tst-auditmod3b.c: Likewise.
	* elf/tst-auditmod4b.c: Likewise.
	* elf/tst-auditmod5b.c: Likewise.
	* elf/tst-auditmod6b.c: Likewise.
	* elf/tst-auditmod6c.c: Likewise.
	* elf/tst-auditmod7b.c: Likewise.
	* sysdeps/x86_64/ffsll.c (ffsl): Likewise.
	* sysdeps/x86_64/preconfigure.in: Likewise.
	* sysdeps/x86_64/preconfigure: Regenerated.

2012-04-13  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/bits/wordsize.h (__WORDSIZE): Also check
	__ILP32__.

2012-04-13  Antoine Balestrat <merkil33@gmail.com>

	* sysdeps/unix/sysv/linux/sparc/sparc64/get_clockfreq.c
	(__get_clockfreq_via_proc_openprom): Fix test on wrong variable.

2012-04-13  Chris Leonard  <cjlhomeaddress@gmail.com>

	[BZ #13973]
	* locale/iso-639.def: Fix gl language name. Spotted by
	Yaron Shahrabani.

2012-04-12  Roland McGrath  <roland@hack.frob.com>

	[BZ #2074]
	* libio/libio.h (__io_write_fn): Update comment.

2012-04-12  Petr Baudis  <pasky@ucw.cz>

	[BZ #2074]
	* stdio.texi (Hook Functions): The user provided writer function
	is not allowed to return -1.

2012-04-11  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/fpu/libm-test-ulps: Update.

2012-04-11  Mike Frysinger  <vapier@gentoo.org>

	* .gitignore: Add /ports, /linuxthreads, and /linuxthreads_db.
	Add a leading slash to rtkaio.

2012-04-11  Jim Meyering  <meyering@redhat.com>

	[BZ #11959]
	* libio/stdio.h (fwrite, fwrite_unlocked): Remove __wur.
	It is not necessarily an error to ignore fwrite's return
	value.  One can reliably use ferror to test for errors after
	the fact.

2012-04-10  H.J. Lu  <hongjiu.lu@intel.com>

	* bits/types.h (__snseconds_t): New type.
	* time/time.h (struct timespec): Use __snseconds_t on tv_nsec.

	* bits/typesizes.h (__SNSECONDS_T_TYPE): New macro.
	* sysdeps/unix/bsd/bsd4.4/freebsd/bits/typesizes.h
	(__SNSECONDS_T_TYPE): Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/typesizes.h